--- a/passwordGenerator_backend/pom.xml
+++ b/passwordGenerator_backend/pom.xml
@@ -54,6 +54,9 @@
     </dependencies>
 
     <build>
+
+        <finalName>password-generator</finalName> <!-- Desired JAR name -->
+
         <plugins>
             <!-- Maven Compiler Plugin -->
             <plugin>
